[package]
name = "merlion-tsdb"
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
description = "Modern Rust reimplementation of the Prometheus TSDB storage engine"
license = "Apache-2.0"
repository = "https://github.com/MerlionOS/merlion-tsdb-rs"
readme = "README.md"
keywords = ["prometheus", "tsdb", "time-series", "metrics"]
categories = ["database-implementations"]
publish = false

[lib]
name = "merlion_tsdb"
path = "src/lib.rs"

[dependencies]
thiserror = "2"
memmap2 = "0.9"

[dev-dependencies]
proptest = "1"

[profile.release]
lto = "thin"
codegen-units = 1
debug = 1

[profile.bench]
inherits = "release"

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
missing_debug_implementations = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pedantic lints that are noisy in TSDB code:
module_name_repetitions = "allow"
similar_names = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
